tests/snapshots/generate_plan_tests__deno_fresh.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "buildImage": "",
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "deno"
        }
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ]
    }
  ],
  "startPhase": {
    "cmd": "deno run -A dev.ts"
  }
}
