tests/snapshots/generate_plan_tests__elixir_no_ecto.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "elixir"
  },
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "mix local.hex --force",
        "mix local.rebar --force",
        "mix deps.get --only prod"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "elixir"
        }
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "mix compile",
        "mix assets.deploy"
      ]
    }
  ],
  "startPhase": {
    "cmd": "mix phx.server"
  }
}
