tests/snapshots/generate_plan_tests__elixir_simple.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "mix local.hex --force",
        "mix local.rebar --force",
        "mix deps.get"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "elixir"
        }
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "mix compile"
      ]
    }
  ],
  "startPhase": {
    "cmd": "mix run --no-halt"
  }
}