tests/snapshots/generate_plan_tests__erlang.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "version": "[version]",
  "setup": {
    "pkgs": [
      {
        "name": "erlang"
      },
      {
        "name": "rebar3"
      }
    ],
    "libraries": [],
    "apt_pkgs": [],
    "baseImage": "ghcr.io/railwayapp/nixpacks:debian-1657820962"
  },
  "install": {
    "cmds": [
      "rebar3 as prod get-deps"
    ]
  },
  "build": {
    "cmds": [
      "rebar3 as prod release"
    ]
  },
  "start": {
    "cmd": "./_build/prod/rel/nixpacks_sample/bin/nixpacks_sample foreground"
  },
  "variables": {},
  "static_assets": {}
}
