tests/snapshots/generate_plan_tests__fsharp_cli.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "ASPNETCORE_ENVIRONMENT": "Production",
    "ASPNETCORE_URLS": "http://0.0.0.0:3000",
    "DOTNET_ROOT": "/nix/var/nix/profiles/default/",
    "NIXPACKS_METADATA": "fsharp"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "dotnet publish --no-restore -c Release -o out"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "dotnet restore"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "dotnet-sdk"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "./out/fsharp-cli"
  }
}
