tests/snapshots/generate_plan_tests__go_cgo_enabled.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {
    "CGO_ENABLED": "1"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "go"
        }
      ],
      "nixLibraries": [],
      "aptPackages": []
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "go build -o out main.go"
      ],
      "cacheDirectories": [
        "/root/.cache/go-build"
      ]
    }
  ],
  "startPhase": {
    "cmd": "./out"
  }
}
