tests/snapshots/generate_plan_tests__go_custom_version.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "ghcr.io/railwayapp/nixpacks:debian-1657820962",
  "variables": {
    "CGO_ENABLED": "0"
  },
  "staticAssets": {},
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "go_1_18"
        }
      ],
      "nixLibraries": [],
      "aptPackages": []
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "go get"
      ],
      "cacheDirectories": [
        "/root/.cache/go-build"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "go build -o out"
      ],
      "cacheDirectories": [
        "/root/.cache/go-build"
      ]
    }
  ],
  "startPhase": {
    "cmd": "./out",
    "runImage": "debian:bullseye-slim"
  }
}
