tests/snapshots/generate_plan_tests__go_gin.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "CGO_ENABLED": "0",
    "NIXPACKS_METADATA": "golang"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "go build -o out"
      ],
      "cacheDirectories": [
        "/root/.cache/go-build"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "go mod download"
      ],
      "cacheDirectories": [
        "/root/.cache/go-build"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "go_1_18"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "./out",
    "runImage": "debian:bullseye-slim"
  }
}
