tests/snapshots/generate_plan_tests__go_mod.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "version": "[version]",
  "setup": {
    "pkgs": [
      {
        "name": "go"
      }
    ],
    "libraries": [],
    "apt_pkgs": [],
    "baseImage": "[baseImage]"
  },
  "install": {
    "cmds": [
      "go get"
    ],
    "cacheDirectories": [
      "/root/.cache/go-build"
    ]
  },
  "build": {
    "cmds": [
      "go build -o out"
    ],
    "cacheDirectories": [
      "/root/.cache/go-build"
    ]
  },
  "start": {
    "cmd": "./out",
    "runImage": "debian:bullseye-slim"
  },
  "variables": {
    "CGO_ENABLED": "0",
    "NIXPACKS_BUILDER": "golang"
  },
  "static_assets": {}
}
